@startuml AdminSystem

top to bottom direction

skinparam backgroundColor white
skinparam classBackgroundColor #FEF2F2
skinparam classBorderColor #DC2626
skinparam arrowColor #991B1B
skinparam roundcorner 20
skinparam shadowing false

abstract class BaseActivity

class AdminMainActivity {
  -loadStats(): void
  -setupPieChart(): void
}

class UsersListActivity {
  -performFullDelete(): void
  -reactivateUser(): void
}

class LeaderBoardActivity {
  -updatePodium(): void
}

AdminMainActivity --|> BaseActivity
UsersListActivity --|> BaseActivity
LeaderBoardActivity --|> BaseActivity

@enduml